--- a/StockTraderRI.Modules.Position/Views/OrderComposite.xaml
+++ b/StockTraderRI.Modules.Position/Views/OrderComposite.xaml
@@ -18,8 +18,7 @@
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" x:Name="StockHeader" Margin="0,5,0,0" Style="{StaticResource TextBlockSectionTitle}" 
-                                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Expander}},Path=DataContext.HeaderInfo}"/>
+                            <TextBlock Grid.Column="0" x:Name="StockHeader" Margin="0,5,0,0" Style="{StaticResource TextBlockSectionTitle}" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Expander}},Path=DataContext.HeaderInfo}"/>
                             <orders:OrderCommands Grid.Column="1" HorizontalAlignment="Right"/>
                         </Grid>
                     </DataTemplate>
