--- a/StockTrader/Themes/AnimatedTabControl.xaml
+++ b/StockTrader/Themes/AnimatedTabControl.xaml
@@ -1,8 +1,9 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:Controls="clr-namespace:StockTraderRI.Controls"
+    xmlns:Controls="clr-namespace:StockTraderRI.CustomControls"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:system="clr-namespace:System;assembly=System.Runtime">
+    xmlns:system="clr-namespace:System;assembly=System.Runtime"
+    xmlns:Controls1="clr-namespace:StockTraderRI.CustomControls;assembly=StockTraderRI.CustomControls">
 
     <SolidColorBrush x:Key="TabControlNormalBorderBrush" Color="#8C8E94"/>
 
@@ -81,7 +82,7 @@
                             <Border x:Name="BorderOut" VerticalAlignment="Stretch">
                                 <Border x:Name="BorderIn" VerticalAlignment="Stretch" Background="#00000000" >
                                     <Grid>
-                                        <Controls:RoundedBox Margin="10" />
+                                        <Controls1:RoundedBox Margin="10" />
                                         <ContentPresenter x:Name="PART_SelectedContentHost" ContentSource="SelectedContent" Margin="20"/>
                                     </Grid>
                                 </Border>
