--- a/StockTrader/Views/Shell.xaml
+++ b/StockTrader/Views/Shell.xaml
@@ -2,14 +2,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:inf="clr-namespace:StockTraderRI.Infrastructure;assembly=StockTraderRI.Infrastructure"
-    xmlns:Controls="clr-namespace:StockTraderRI.Controls"
+    xmlns:Controls="clr-namespace:StockTraderRI.CustomControls"
     xmlns:infBehaviors="clr-namespace:StockTraderRI.Infrastructure.Behaviors;assembly=StockTraderRI.Infrastructure"
     xmlns:StockTraderRI="clr-namespace:StockTraderRI"
     infBehaviors:RegionPopupBehaviors.CreatePopupRegionWithName="{x:Static inf:RegionNames.SecondaryRegion}"
     infBehaviors:RegionPopupBehaviors.ContainerWindowStyle="{StaticResource WindowRegionStyle}"
     xmlns:prism="http://prismlibrary.com/"
     prism:ViewModelLocator.AutoWireViewModel="True"
-    Title="Stock Trader WPF .NET Core 3" 
+    xmlns:xamlhost="clr-namespace:Microsoft.Toolkit.Wpf.UI.XamlHost;assembly=Microsoft.Toolkit.Wpf.UI.XamlHost" 
+    xmlns:customControls="clr-namespace:StockTraderRI.CustomControls;assembly=StockTraderRI.CustomControls"
+    Title="Stock Trader v2 Preview" 
     Height="768" Width="1024" 
     WindowStartupLocation="CenterScreen" 
     WindowState="Maximized"
@@ -94,11 +96,11 @@
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
     </Window.Resources>
-    <Window.Triggers>
+    <!--<Window.Triggers>
         <EventTrigger RoutedEvent="FrameworkElement.Loaded">
             <BeginStoryboard Storyboard="{StaticResource InTransition}"/>
         </EventTrigger>
-    </Window.Triggers>
+    </Window.Triggers>-->
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Top">
         <Grid Grid.Row="1" 
               RenderTransformOrigin="0.5,0.5" 
@@ -116,8 +118,8 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <!-- logo -->
-            <Canvas x:Name="Logo" Grid.ColumnSpan="2" RenderTransformOrigin="0.5,0.5">
+            <!--logo-->
+            <Canvas x:Name="Logo" Grid.ColumnSpan="2">
                 <Canvas.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -126,31 +128,46 @@
                         <TranslateTransform/>
                     </TransformGroup>
                 </Canvas.RenderTransform>
-                <TextBlock Text="CFI " TextWrapping="NoWrap" Foreground="#FFC4CFD6" FontSize="72" Opacity="0.85" Canvas.Left="0" Canvas.Top="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="80" Width="135" TextAlignment="Left" FontWeight="Bold" />
-                <TextBlock Text="STOCKTRADER" TextWrapping="NoWrap" Foreground="#FFC4CFD6" FontSize="72" Opacity="0.85" Height="80" TextAlignment="Left" FontWeight="Normal" Width="525" Canvas.Left="150" Canvas.Top="5"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="CFI " TextWrapping="NoWrap" Foreground="#FFC4CFD6" FontSize="72" FontWeight="Bold" 
+                               Opacity="0.85" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
+                    <TextBlock Text="STOCKTRADER" TextWrapping="NoWrap" Foreground="#FFC4CFD6" FontSize="72"
+                               Opacity="0.85" TextAlignment="Left" FontWeight="Normal" />
+                </StackPanel>
             </Canvas>
 
+            <!--<xamlhost:WindowsXamlHost x:Name="TeachingTip" Width="100" Height="100"  InitialTypeName="WindowsXAMLControls.TeachingTip" ChildChanged="OnTeachingTip" />-->
+
             <!-- main bar - Region MainToolBarRegion -->
-            <ItemsControl x:Name="MainToolbar" 
+            <Grid  Grid.Row="1"   HorizontalAlignment="Right" VerticalAlignment="Top" Height="Auto">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <xamlhost:WindowsXamlHost Width="150" InitialTypeName="WindowsXAMLControls.AutoSuggestStocks" ChildChanged="OnASBChanged" />
+
+                <ItemsControl x:Name="MainToolbar" 
                           prism:RegionManager.RegionName="{x:Static inf:RegionNames.MainToolBarRegion}" 
                           HorizontalAlignment="Right" VerticalAlignment="Top" 
                           Margin="0,0,10,0" 
-                          Grid.Row="1" 
+                          Grid.Column="1" 
                           RenderTransformOrigin="0.5,0.5">
-                <ItemsControl.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform/>
-                        <SkewTransform/>
-                        <RotateTransform/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </ItemsControl.RenderTransform>
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal" />
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-            </ItemsControl>
+                    <ItemsControl.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </ItemsControl.RenderTransform>
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+            </Grid>
 
             <!-- content RegionNames.MainRegion-->
             <Grid x:Name="ContentGrid" 
@@ -189,7 +206,7 @@
                     <ContentControl.Template>
                         <ControlTemplate TargetType="ContentControl">
                             <Grid>
-                                <Controls:RoundedBox />
+                                <customControls:RoundedBox />
                                 <ContentPresenter Margin="10,0,10,0" Content="{TemplateBinding Content}" />
                             </Grid>
                             <ControlTemplate.Triggers>
@@ -233,7 +250,7 @@
                                         </ItemsControl.ItemsPanel>
                                     </ItemsControl>
                                 </Border>
-                                <Controls:RoundedBox Grid.Row="1" />
+                                <customControls:RoundedBox Grid.Row="1" />
                                 <ScrollViewer Grid.Row="1" Width="285" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
                                     <ItemsPresenter Width="285" />
                                 </ScrollViewer>
