--- a/StockTraderRI.Modules.Position/Views/OrderComposite.xaml
+++ b/StockTraderRI.Modules.Position/Views/OrderComposite.xaml
@@ -19,7 +19,7 @@
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" x:Name="StockHeader" Margin="0,5,0,0" Style="{StaticResource TextBlockSectionTitle}" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Expander}},Path=DataContext.HeaderInfo}"/>
-                            <orders:OrderCommands Grid.Column="1" HorizontalAlignment="Right"/>
+                            <orders:OrderCommands  HorizontalAlignment="Right"/>
                         </Grid>
                     </DataTemplate>
                 </Expander.HeaderTemplate>
